--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,5 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   },
-  "proxy":["http://localhost:3000", "http://localhost:4000"]
+  "proxy": "http://localhost:4000"
 }
